# khudib

./: .gitignore  Cargo.toml  README.md  build.rs
eval/: analyze.py  collect.py  config.json  config.toml  hotel_services.toml  start_services.sh
proto/: breakwater.proto  khudib.proto
src/: proxy.rs
src/breakwater/: client.rs  lib.rs
src/client_app/: client.rs
src/client_sidecar/: client_sidecar.rs
src/frontend/: main.rs  server.rs
src/geo/: main.rs  server.rs
src/launcher/: line_reader.rs
src/profile/: main.rs  server.rs
src/rate/: main.rs  server.rs
src/search/: main.rs  server.rs
src/server_app/: server.rs
src/server_sidecar/: server_sidecar.rs
